Added Gecko class.

--- a/LizProject1/LizProject1.csproj
+++ b/LizProject1/LizProject1.csproj
@@ -48,9 +48,11 @@
     <Compile Include="ClassStuff\Car.cs" />
     <Compile Include="ClassStuff\Mammal.cs" />
     <Compile Include="ClassStuff\Reptile.cs" />
-    <Compile Include="ClassStuff\Vehical.cs" />
+    <Compile Include="ClassStuff\Vehicle.cs" />
+    <Compile Include="ClassStuff\Gecko.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ClassStuff\Snake.cs" />
     <Compile Include="Walter.cs" />
   </ItemGroup>
   <ItemGroup>
