--- a/LizProject1/LizProject1.csproj
+++ b/LizProject1/LizProject1.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ClassStuff\SubClass.cs" />
     <Compile Include="ClassStuff\Vehicle.cs" />
     <Compile Include="ClassStuff\Gecko.cs" />
+    <Compile Include="Interfaces\Interface1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ClassStuff\Snake.cs" />
@@ -60,5 +61,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
